kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
  labels:
    app: users
spec:
  type: ClusterIP
  ports:
  - name: users
    protocol: TCP
    port: 80
    targetPort: http-users-svc
  selector:
    app: users
